--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -10,4 +10,5 @@ cliente_inexistente= Cliente {0} nao existe.
 empresa_ja_cadastrada=Empresa ja cadastrada com o cnpj {0}.
 empresa_inexistente=Empresa nao existe.
 
+recurso_nao_encontrado=Recurso nao encontrado!
 cliente_sem_premissao=Cliente {0} sem permissao!
